# multillm

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  KB.md  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  install.sh  pyproject.toml
.claude-plugin/: plugin.json
.codex/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: backend_request.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: build-image.yml  ci.yml  codeql.yml  dependency-review.yml  homebrew.yml  release.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-open-source-readiness/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-04-SUMMARY.md  01-05-SUMMARY.md  01-07-SUMMARY.md  01-08-SUMMARY.md  01-09-SUMMARY.md  SECRET-SCAN-REPORT.md  credentials-rotated.md  filter-repo-spec.txt  mailmap-rewrite.txt
.planning/phases/02a-adapter-hot-path-refactor/: 02a-01-PLAN.md  02a-01-SUMMARY.md  02a-02-PLAN.md  02a-02-SUMMARY.md  02a-CONTEXT.md  02a-DISCUSSION-LOG.md  02a-PLAN-CHECK.md  coverage-baseline.README.md  coverage-baseline.json
.planning/phases/02b-auth-multi-tenancy/: 02b-01-PLAN.md  02b-01-SUMMARY.md  02b-02-PLAN.md  02b-CONTEXT.md  02b-PLAN-CHECK.md
.serena/: project.yml
Formula/: multillm.rb
agents/: arch-council.md  code-reviewer.md  cross-llm.md  local-summarizer.md  security-reviewer.md  session-manager.md  task-planner.md  work-orchestrator.md
commands/: llm-ask.md  llm-context.md  llm-council.md  llm-dashboard.md  llm-discover.md  llm-doctor.md  llm-memory.md  llm-orchestrator.md  llm-review.md  llm-settings.md  llm-status.md  llm-usage-hourly.md  llm-usage.md
deploy/oci-ollama/: README.md  cloud-init.yaml
docs/: adaptive-fusion.md  evaluations.md  installation.md
docs/operations/: README.md  backup-restore.md  deployment.md  release.md  troubleshooting.md  upgrade.md
evals/adaptive_fusion/v1/: README.md  corpus.jsonl
evals/deepeval/: README.md  cases.json  gateway_compare.py  models.json  test_gateway_model_comparison.py
hooks/: hooks.json  start-gateway.sh
multillm/: __init__.py  __main__.py  adaptive_orchestration.py  auth.py  budgets.py  bundle_cache.py  caching.py  claude_stats.py  cli.py  cli_discovery.py  cli_tools.py  codex_identity.py  codex_stats.py  complexity.py  config.py  converters.py  cost_forecast.py  discovery.py  doctor.py  evidence.py  failover.py  fusion.py  gateway.py  gemini_stats.py  health.py  http_pool.py  langfuse_integration.py  llm_observability.py  local_launch.py  mcp_server.py  memory.py  moa.py  model_registry.py  oca_auth.py  oca_login.py  orchestration_contracts.py  orchestration_store.py  private_credit_overlay.py  rate_limit.py  resilience.py  (+12 more)
multillm/adapters/: __init__.py  anthropic.py  antigravity.py  azure_openai.py  base.py  bedrock.py  claude_cli.py  cloud_openai_compat.py  codex_cli.py  gemini.py  gemini_cli.py  lmstudio.py  oca.py  oci_genai.py  ollama.py  openai.py  openai_compat.py  openrouter.py  registry.py  setup.py
multillm/db/: __init__.py  memory.py  repo.py  sessions.py  tracking.py
multillm/evaluation/: __init__.py  api.py  artifacts.py  benchmarks.py  contracts.py  deepeval_adapter.py  judging.py  metrics.py  reports.py  runner.py  statistics.py  store.py  suites.py
multillm/evaluation/data/: finops_v1.json
multillm/migrations/: __init__.py  backup.py  env.py  fts5.py  runner.py
multillm/migrations/versions/: 0001_smoke_test.py  0002_setup_state.py  0003_auth_tenancy.py  0004_adaptive_orchestration.py  0005_evaluations.py  0006_evaluation_metric_attempts.py  __init__.py
multillm/setup/: __init__.py  middleware.py  passwords.py  routes.py  state.py
multillm/setup/static/: wizard.css  wizard.js
multillm/setup/templates/: complete.html  wizard.html
multillm/static/: dashboard.html  evaluations.html  evaluations.js  team.html
skills/llm-dashboard/: SKILL.md
skills/llm-orchestrator/: SKILL.md
skills/llm-orchestrator/agents/: openai.yaml
skills/llm-orchestrator/hooks/: auto-checkpoint.sh  session-recover.sh
tests/: __init__.py  conftest.py  test_adapter_registry_dispatch.py  test_adaptive_gateway.py  test_adaptive_orchestration.py  test_antigravity_adapter.py  test_auth.py  test_auth_tenancy_migration.py  test_budgets.py  test_bundle_cache.py  test_caching.py  test_claude_cli_adapter.py  test_claude_stats.py  test_cli_discovery.py  test_codex_cli_adapter.py  test_codex_identity.py  test_codex_stats.py  test_complexity.py  test_config.py  test_container_contract.py  test_converters.py  test_cost_forecast.py  test_dashboard_fusion_ui.py  test_db_repo_protocol.py  test_db_repos.py  test_deepeval_adapter.py  test_discovery.py  test_doctor.py  test_env_example_coverage.py  test_eval_cli.py  test_eval_corpus.py  test_evaluation_api.py  test_evaluation_benchmarks.py  test_evaluation_core.py  test_evaluation_dashboard.py  test_evaluation_judging.py  test_evaluation_observability.py  test_evaluation_pairwise.py  test_evaluation_preflight.py  test_evaluation_runner.py  (+53 more)
