[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multillm"
version = "1.0.0rc1"
description = "Multi-LLM gateway, orchestrator, and tracker for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx[http2]>=0.27.0",
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "google-genai>=1.0.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "alembic>=1.18",
    "sqlalchemy>=2.0",
    "click>=8.1",
    "argon2-cffi>=23.1",
    "jinja2>=3.1",
]

# ${OWNER}/${REPO} placeholders resolve at first-publish time per D-16.
# Default OWNER is `adibirzu`; flip to the org owner if/when repo ownership
# transfers. PyPI surfaces these as the project's sidebar links.
[project.urls]
Homepage      = "https://github.com/${OWNER}/${REPO}"
Repository    = "https://github.com/${OWNER}/${REPO}"
Documentation = "https://github.com/${OWNER}/${REPO}#readme"
Issues        = "https://github.com/${OWNER}/${REPO}/issues"
Changelog     = "https://github.com/${OWNER}/${REPO}/releases"

[project.optional-dependencies]
langfuse = [
    "langfuse>=2.0.0",
]
cache = [
    "langcache>=0.1.0",
]
oci = [
    "oci>=2.140.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "respx>=0.22",
    "pytest-cov>=5.0",
]
dev = [
    "pre-commit>=4.0",
    "ruff==0.14.10",
    "mypy>=1.11",
]

[project.scripts]
multillm = "multillm.cli:app"
multillm-gateway = "multillm.gateway:main"
multillm-collect = "multillm.team_collector:main"
multillm-mcp = "multillm.mcp_server:main"
multillm-doctor = "multillm.doctor:main"

# Editable reinstall (pip install -e . --no-deps) required after editing this table.
# Plan 02a-01 wires the registry to discover backends via this entry-point group.
# Phase 9 plugin SDK extends the same group — third-party packages declare here
# and the registry picks them up automatically.
[project.entry-points."multillm.backends"]
anthropic    = "multillm.adapters.anthropic:AnthropicAdapter"
azure_openai = "multillm.adapters.azure_openai:AzureOpenAIAdapter"
bedrock      = "multillm.adapters.bedrock:BedrockAdapter"
codex_cli    = "multillm.adapters.codex_cli:CodexCLIAdapter"
gemini       = "multillm.adapters.gemini:GeminiAdapter"
gemini_cli   = "multillm.adapters.gemini_cli:GeminiCLIAdapter"
lmstudio     = "multillm.adapters.lmstudio:LMStudioAdapter"
oci_genai    = "multillm.adapters.oci_genai:OCIGenAIAdapter"
ollama       = "multillm.adapters.ollama:OllamaAdapter"
openai       = "multillm.adapters.openai:OpenAIAdapter"
openrouter   = "multillm.adapters.openrouter:OpenRouterAdapter"
# Note: `openai_compat` is a shared helper module (call_openai_compat function),
# not a backend with its own adapter class. Backends that use the OpenAI-compatible
# protocol register through the cloud_openai_compat factories (groq/deepseek/...)
# below or through dedicated classes (openai, openrouter, lmstudio).
# cloud_openai_compat family — each entry maps to a factory in cloud_openai_compat.py
# (factories land in Task 3; registry logs and skips broken entries before then)
groq         = "multillm.adapters.cloud_openai_compat:make_groq"
deepseek     = "multillm.adapters.cloud_openai_compat:make_deepseek"
mistral      = "multillm.adapters.cloud_openai_compat:make_mistral"
together     = "multillm.adapters.cloud_openai_compat:make_together"
xai          = "multillm.adapters.cloud_openai_compat:make_xai"
fireworks    = "multillm.adapters.cloud_openai_compat:make_fireworks"

[tool.setuptools.packages.find]
include = ["multillm*"]

[tool.setuptools.package-data]
multillm = ["static/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
# Exclude modules that run as separate processes, install OS services, or need
# an optional SDK — they are exercised by integration/manual testing, not the
# unit suite, and would otherwise drag the gate below its real, met level.
omit = [
    "multillm/mcp_server.py",      # separate FastMCP process (optional)
    "multillm/team_collector.py",  # per-workstation collector, deployed standalone
    "multillm/service.py",         # launchd/systemd installer (OS-specific)
    "multillm/cli.py",             # thin CLI entrypoint wrapper
    "multillm/adapters/oci_genai.py",  # requires the optional `oci` SDK (skipped in CI)
]
